# migrate-n

./: HISTORY  README  migrate.html
bench/: run.rb
contribution/: #mba2#  .RData  .Rhistory  b1_merged  b2  coda_analyze.R  combine-sumfiles  compile_aix  compile_icc  mba
contribution/b1_splits/: l1-r1  l1-r2  l1-r3  l1-r4  lLocus-r4  lLocus-rReplicate
example/: .gitignore  GenoDive Results.gdv  README  README-3.1.x  bayesallfile  infile.ep  infile.msat  infile.seq  log  outfile-bayes  outfile-bayes-saved  outfile-ml  outfile-ml-saved  parmfile  parmfile.t  parmfile.testbayes  parmfile.testml  runtimes  sumfile  timerecorder
src/: .gitignore  INSTALL  Makefile.in  aic.c  aic.h  altivec.c  altivec.h  bayes.c  bayes.h  broyden.c  broyden.h  calculator.c  combroyden.h  combroyden2.c  conf.h  conf.h.in  config.status  configure  configure.in  copy_mt_to_src  data.c  data.h  definitions.h  fst.c  fst.h  gammalike.c  gammalike.h  heating.c  heating.h  histogram.c  histogram.h  install_migrate  integrate.h  inthp.c  jamfile  joint-chains.c  joint-chains.h  laguerre.c  laguerre.h  lrt.c  (+53 more)
src/SFMT-src-1.3.3/: Makefile  test
src/haru/: PdfAnnotations.cc  PdfAutoPtrObjects.cc  PdfBorderStyle.cc  PdfCIDFontDef.cc  PdfCMap.cc  PdfCMap_ETen_B5.cc  PdfCMap_EUC.cc  PdfCMap_GB_EUC.cc  PdfCMap_KSC_EUC.cc  PdfCMap_KSCms_UHC.cc  PdfCMap_RKSJ.cc  PdfCatalog.cc  PdfContents.cc  PdfDestinations.cc  PdfDoc.cc  PdfEncoding.cc  PdfEncoding_ISO8859.cc  PdfEncoding_KOI8.cc  PdfEncoding_MSCP.cc  PdfEncrypt.cc  PdfExceptions.cc  PdfFontDef.cc  PdfFontDef_Courier.cc  PdfFontDef_Helvetica.cc  PdfFontDef_Symbol.cc  PdfFontDef_Times.cc  PdfFontDef_ZapfDingbats.cc  PdfFonts.cc  PdfInfo.cc  PdfJpegImage.cc  PdfLList.cc  PdfList.cc  PdfMbFontDef_Batang.cc  PdfMbFontDef_Dotum.cc  PdfMbFontDef_Gothic.cc  PdfMbFontDef_Mincyo.cc  PdfMbFontDef_Ming.cc  PdfMbFontDef_SimHei.cc  PdfMbFontDef_SimSun.cc  PdfMbFonts.cc  (+47 more)
src/haru/examples/: EncodingList.cc  EncodingListMb_ETen_B5.cc  EncodingListMb_EUC.cc  EncodingListMb_GB_EUC.cc  EncodingListMb_KSC_EUC.cc  EncodingListMb_KSCms_UHC.cc  EncodingListMb_SJIS.cc  Encrypt.cc  FontExample1.cc  FontExample2.cc  GraphPaper.cc  Hello.cc  JpFontExample1.cc  JpFontExample2.cc  JpegExample.cc  LineExample.cc  LinkExample.cc  OpenAction.cc  OutlineExample.cc  Permission.cc  PngExample.cc  TextAnnotation.cc  ViewStyle.cc
src/haru/examples/mbtext/: euc.txt  sjis.txt
src/haru/examples_c/: encoding_list.c  font_example1.c  font_example2.c  jp_font_example.c  jpeg_example.c  line_example.c  makefile.cygwin  makefile.sample  png_example.c
src/haru/experimental/: DocMaker.cc  LibHaru.txt  PdfWMFLoader.cc  encodingtest.cc  libharu_wmf.h  make.sh  metafiletest.cc
src/haru/test/: Tests.cc  TestsJp.cc  make.sh
src/migrate_kit/: findcores  migrate-mpi  migrate-n  migrate_mpi  migratehelp  startbash  status
src/migrateshell.app/Contents/: Info.plist
src/migrateshell.app/Contents/Resources/Scripts/: main.scpt
src/migrateshell.app/migrate_kit/: fastmigrate-n  findshell  install_migrate  migrate-n  migrate-n-mpi  migrate_kitintro  migrateinfo
src/migshelltemplate.app/Contents/Resources/: applet.icns  applet.rsrc
src/testsuite/testsuite/: infile.dna  infile.iam  infile.smm  parmfile-perf  parmfile.dna  parmfile.dna-ml  parmfile.iam  parmfile.iam-ml  parmfile.ssm  parmfile.ssm-ml  runtest
src/zlib/: #Makefile#  Makefile.in
